@@ -25,7 +25,7 @@
 /*
  * @test
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @run testng/othervm -Dforeign.restricted=permit TestIllegalLink
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED TestIllegalLink
  */
 
 import jdk.incubator.foreign.CLinker;
@@ -73,7 +73,7 @@ public class TestIllegalLink {
             },
             {
                 MethodType.methodType(void.class, int.class),
-                FunctionDescriptor.ofVoid(MemoryLayout.ofPaddingBits(32)),
+                FunctionDescriptor.ofVoid(MemoryLayout.paddingLayout(32)),
                 "Expected a ValueLayout"
             },
             {
@@ -88,7 +88,7 @@ public class TestIllegalLink {
             },
             {
                 MethodType.methodType(void.class, MemoryAddress.class),
-                FunctionDescriptor.ofVoid(MemoryLayout.ofPaddingBits(64)),
+                FunctionDescriptor.ofVoid(MemoryLayout.paddingLayout(64)),
                 "Expected a ValueLayout"
             },
             {
